syntax = "proto3";

package proto;

message GetProductByIdRequest {
    int32 product_id = 1;
}

message GetProductByIdResponse {
    int32 code = 1;
    string msg = 2;
    ProductInfo data = 3;
}

message ProductInfo {
    int32 id = 1;
    string name = 2;
    int32 brand_id = 3;
    string photo_url = 4;
}

service ProductService {
    rpc GetProductById(GetProductByIdRequest) returns(GetProductByIdResponse){}
}
